--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -1,6 +1,15 @@
 .page {
-  font-family: "Roboto", "Arial", "Helvetica", sans-serif;
-  font-size: 20px;
-  color: green;
-  background-color: rgb(191, 188, 192);
+  height: 100%;
+  font-family: "Barlow", "Arial", "Helvetica", sans-serif;
+  font-size: 18px;
+  color: #050215;
+}
+
+.page__body {
+  display: flex;
+  flex-direction: column;
+  min-width: 1920px;
+  min-height: 100%;
+  margin: 0 auto;
+  background-color: #ffffff;
 }
