--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,2 +1,14 @@
 @import "global/fonts.scss";
+@import "global/global.scss";
+@import "global/variables.scss";
 @import "blocks/page.scss";
+@import "blocks/page-body.scss";
+@import "blocks/page-header.scss";
+@import "blocks/logo.scss";
+@import "blocks/nav.scss";
+@import "blocks/page-main.scss";
+@import "blocks/services.scss";
+@import "blocks/pagination.scss";
+@import "blocks/control.scss";
+@import "blocks/page-footer.scss";
+@import "blocks/social-list.scss";
