--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -1,8 +1,10 @@
 .page {
   height: 100%;
   font-family: "Barlow", "Arial", "Helvetica", sans-serif;
+  font-weight: 400;
   font-size: 18px;
-  color: #050215;
+  line-height: 22px;
+  color: $text-color;
 }
 
 .page__body {
@@ -10,6 +12,6 @@
   flex-direction: column;
   min-width: 1920px;
   min-height: 100%;
-  margin: 0 auto;
-  background-color: #ffffff;
+  margin: 0;
+  background-color: $white;
 }
