--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -1,7 +1,36 @@
+h2,
+h3 {
+  margin: 0;
+}
+
+p {
+  margin: 0;
+}
+
 img {
   max-width: 100%;
   height: auto;
   display: block;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+  cursor: pointer;
+}
+
+button {
+  border: none;
+  padding: 0;
+  margin: 0;
+  background: none;
+  cursor: pointer;
 }
 
 .visually-hidden {
