--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,9 +1,13 @@
 .page-header {
   position: absolute;
-  top: 57px;
+  top: 64px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
   z-index: 1;
   width: 100%;
+}
+
+.page-header__logo {
+  cursor: default;
+  margin-right: 914px;
 }
