--- a/source/sass/blocks/control.scss
+++ b/source/sass/blocks/control.scss
@@ -1,6 +1,20 @@
 .control__button {
   width: 58px;
   height: 79px;
-  border: 2px solid #b4977b;
+  border: 2px solid $brown;
   border-radius: 50px;
+
+  &:hover {
+    border: 2px solid #999fad;
+    background-color: #999fad;
+  }
+
+  &:active {
+    background-color: #c7722e;
+    border: 2px solid #c7722e;
+  }
+}
+
+.control__button:hover .control__icon {
+  fill: $white;
 }
