--- a/source/sass/blocks/pagination.scss
+++ b/source/sass/blocks/pagination.scss
@@ -1,3 +1,10 @@
+.pagination {
+  display: flex;
+  flex-direction: column;
+  row-gap: 182px;
+  align-items: center;
+}
+
 .pagination__pages {
   display: flex;
   flex-direction: column;
@@ -12,23 +19,25 @@
   color: #e4d6c9;
 
   &--current {
-    color: #b4977b;
+    color: $brown;
   }
 }
 
 .pagination__separator {
+  position: relative;
   display: block;
   width: 4px;
   height: 200px;
   background: #e5e5e5;
   border-radius: 2px;
+}
 
-  &::before {
-    content: "";
-    display: block;
-    width: 4px;
-    height: 42px;
-    background: #b4977b;
-    border-radius: 2px;
-  }
+.pagination__scroll {
+  position: absolute;
+  top: 0;
+  display: block;
+  width: 4px;
+  height: 42px;
+  background: $brown;
+  border-radius: 2px;
 }
