--- a/source/sass/blocks/social-list.scss
+++ b/source/sass/blocks/social-list.scss
@@ -1,8 +1,8 @@
 .social-list {
   display: flex;
-  max-width: 517px;
-  justify-content: space-evenly;
-  margin-left: 301px;
+  flex-wrap: wrap;
+  max-width: 386px;
+  column-gap: 94px;
 }
 
 .social-list__link {
