--- a/source/sass/blocks/page-body.scss
+++ b/source/sass/blocks/page-body.scss
@@ -1,7 +1,7 @@
 .page-body {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 1920px;
   max-width: 1920px;
   height: 1080px;
   background: url("../../img/background-image.svg") no-repeat 1110px 188px;
@@ -15,6 +15,7 @@
     border: 2px solid #e5e5e5;
   }
 }
+
 .page-body__page-main {
   margin: 0 106px 0 101px;
 }
