обновление пакета squoosh и внесение изменений в script.js

--- a/source/sass/blocks/page-body.scss
+++ b/source/sass/blocks/page-body.scss
@@ -4,7 +4,7 @@
   width: 1920px;
   max-width: 1920px;
   height: 1080px;
-  background: url("../../img/background-image.svg") no-repeat 1110px 188px;
+  background: url("../img/background-image.svg") no-repeat 1110px 188px;
 
   &::after {
     content: "";
