--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -2,8 +2,8 @@
   font-family: "Barlow";
   font-style: normal;
   font-weight: 400;
-  src: url("../../fonts/Barlowmedium.woff2") format("woff2"),
-    url("../../fonts/Barlowregular.woff") format("woff");
+  src: url("../fonts/Barlowmedium.woff2") format("woff2"),
+    url("../fonts/Barlowregular.woff") format("woff");
   font-display: swap;
 }
 
@@ -11,8 +11,8 @@
   font-family: "Barlow";
   font-style: normal;
   font-weight: 500;
-  src: url("../../fonts/Barlowmedium.woff2") format("woff2"),
-    url("../../fonts/Barlowmedium.woff") format("woff");
+  src: url("../fonts/Barlowmedium.woff2") format("woff2"),
+    url("../fonts/Barlowmedium.woff") format("woff");
   font-display: swap;
 }
 
@@ -20,7 +20,7 @@
   font-family: "Barlow";
   font-style: normal;
   font-weight: 600;
-  src: url("../../fonts/Barlowsemibold.woff2") format("woff2"),
-    url("../../fonts/Barlowsemibold.woff") format("woff");
+  src: url("../fonts/Barlowsemibold.woff2") format("woff2"),
+    url("../fonts/Barlowsemibold.woff") format("woff");
   font-display: swap;
 }
